fix : props keys for Collapse in Accomodation page + style on Collapse (accomodation mobile and change <p> to <div>

--- a/src/sass/components/Collapse.scss
+++ b/src/sass/components/Collapse.scss
@@ -26,14 +26,15 @@
 
 .collapse-content {
     background-color: $fourth-color;
-    padding: 0 20px;
     max-height: 0;
     overflow: hidden;
     transition: max-height 500ms;
+    &__text{
+        margin: 16px 20px;
+    }
 }
 
 .is-open{
     background-color: $fourth-color;
     max-height: 100%;
-    
 };
